# snapctx

./: Cargo.toml  README.md
src/: cli.rs  detector.rs  lib.rs  main.rs  output.rs  project.rs
tests/: integration_tests.rs
