[package]
name = "snapctx"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Serkan Altuntas <serkan@serkan.ai>"]
description = "A CLI tool to create comprehensive source code summaries for LLM context."

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ignore = "0.4"
gix = "0.67.0"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2.4"
log = "0.4"
env_logger = "0.11.5"